--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="croissant">#FED056</color>
     <color name="bl">#2561A1</color>
 
+    <color name="xanh">#81C2DB</color>
 </resources>
