--- a/app/src/main/res/layout/fragment_quanly_khohang.xml
+++ b/app/src/main/res/layout/fragment_quanly_khohang.xml
@@ -11,10 +11,12 @@
         android:id="@+id/tablayoutkhohang"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:tabBackground="@color/cake"
+        app:tabIndicatorColor="@color/cake"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
-    <androidx.viewpager.widget.ViewPager
+    <com.example.masterphone.QuanLy.TabFragment.customViewPager
         android:id="@+id/viewpagerkhohang"
         android:layout_width="match_parent"
         android:layout_height="700dp"
