--- a/app/src/main/res/layout/fragment_quanly_khohang.xml
+++ b/app/src/main/res/layout/fragment_quanly_khohang.xml
@@ -19,7 +19,8 @@
     <com.example.masterphone.QuanLy.TabFragment.customViewPager
         android:id="@+id/viewpagerkhohang"
         android:layout_width="match_parent"
-        android:layout_height="700dp"
+        android:layout_height="635dp"
+        android:background="@color/croissant"
         app:layout_constraintTop_toBottomOf="@id/tablayoutkhohang"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
