--- a/app/src/main/res/drawable/khungbo4goc.xml
+++ b/app/src/main/res/drawable/khungbo4goc.xml
@@ -9,6 +9,6 @@
         android:topLeftRadius="69dp"
         android:topRightRadius="69dp"/>
 
-    <solid android:color="#EE3766"/>
+    <solid android:color="@color/xanh"/>
 
 </shape>
