--- a/app/src/main/res/layout/quanly_fragment_thuonghieu.xml
+++ b/app/src/main/res/layout/quanly_fragment_thuonghieu.xml
@@ -1,15 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".QuanLy.TabFragment.ThuongHieuFragment"
-    android:background="@color/cake">
+    android:background="@color/white">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <ImageView
+        android:id="@+id/imgSP"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="25dp"
+        android:background="@drawable/roundnotselect"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+    <ImageButton
+        android:id="@+id/imgbtSPChange"
+        android:layout_width="36dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginLeft="140dp"
+        android:background="@null"
+        android:scaleType="fitCenter"
+        android:src="@drawable/imagegallery"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+    <!--    <Button-->
+    <!--        android:id="@+id/btnChaneImage"-->
+    <!--        android:layout_width="300dp"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:text="Thay đổi ảnh đại diện"-->
+    <!--        android:textSize="20dp"-->
+    <!--        android:textColor="@color/white"-->
+    <!--        android:background="@color/cake"-->
+    <!--        android:layout_marginBottom="150dp"-->
+    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
+    <!--        app:layout_constraintRight_toRightOf="parent"-->
+    <!--        app:layout_constraintBottom_toBottomOf="parent"/>-->
+    <LinearLayout
+        android:id="@+id/layoutAddInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="30dp"
+        android:gravity="center"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imgSP">
+        <EditText
+            android:id="@+id/edtTenSP"
+            android:layout_width="330dp"
+            android:layout_height="50dp"
+            android:hint="Tên sản phẩm"
+            android:textColor="@color/black"
+            android:background="@drawable/edtbackground"
+            android:textSize="20dp"
+            android:layout_marginBottom="15dp"/>
+        <EditText
+            android:id="@+id/edtLoaiSP"
+            android:layout_width="330dp"
+            android:layout_height="50dp"
+            android:textColor="@color/black"
+            android:background="@drawable/edtbackground"
+            android:hint="Loại"
+            android:textSize="20dp"
+            android:layout_marginBottom="15dp"/>
 
-</FrameLayout>
+        <EditText
+            android:id="@+id/edtGiaSP"
+            android:layout_width="330dp"
+            android:layout_height="50dp"
+            android:hint="Giá"
+            android:background="@drawable/edtbackground"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            android:layout_marginBottom="15dp"/>
+        <EditText
+            android:id="@+id/edtSoLuong"
+            android:layout_width="330dp"
+            android:layout_height="50dp"
+            android:hint="Số lượng"
+            android:background="@drawable/edtbackground"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            android:layout_marginBottom="15dp"/>
+        <EditText
+            android:id="@+id/edtMoTa"
+            android:layout_width="330dp"
+            android:layout_height="100dp"
+            android:hint="Mô tả"
+            android:background="@drawable/edtbackground"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            android:layout_marginBottom="15dp"
+            android:gravity="top"
+            android:paddingTop="10dp"/>
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btnCapNhat"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:text="Thêm"
+        android:textColor="@color/white"
+        android:background="@drawable/roundcake"
+        android:layout_marginTop="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/layoutAddInfo"
+        app:layout_constraintRight_toLeftOf="@id/btnHuy"/>
+
+    <Button
+        android:id="@+id/btnHuy"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/roundcake"
+        android:text="Hủy"
+        android:textColor="@color/white"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/btnCapNhat"
+        app:layout_constraintTop_toBottomOf="@id/layoutAddInfo" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
