--- a/app/src/main/res/layout/activity_quanly_quanlychinh.xml
+++ b/app/src/main/res/layout/activity_quanly_quanlychinh.xml
@@ -3,22 +3,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/viewpagerquanly"
+<!--    <com.example.masterphone.QuanLy.TabFragment.customViewPager-->
+<!--        android:id="@+id/viewpagerquanly"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="750dp"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintRight_toRightOf="parent"/>-->
+<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
+<!--        android:id="@+id/bottomnavquanly"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintRight_toRightOf="parent"-->
+<!--        android:background="#6DD5FA"-->
+<!--        app:menu="@menu/menu_quanly_bottomnav"-->
+<!--        app:itemTextColor="@color/custom_color_itembottomnav_quanly"-->
+<!--        app:itemIconTint="@color/custom_color_itembottomnav_quanly"/>-->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/homeadmin_fragment"
         android:layout_width="match_parent"
-        android:layout_height="750dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomnavquanly"
+        android:layout_height="match_parent"
+        android:background="@color/white"/>
+    <com.etebarian.meowbottomnavigation.MeowBottomNavigation
+        android:id="@+id/btnavadmin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:mbn_circleColor="@color/xanh"
+        app:mbn_backgroundBottomColor="@color/xanh"
+        app:mbn_defaultIconColor="#ffffff"
+        app:mbn_selectedIconColor="#ffffff"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:background="#6DD5FA"
-        app:menu="@menu/menu_quanly_bottomnav"
-        app:itemTextColor="@color/custom_color_itembottomnav_quanly"
-        app:itemIconTint="@color/custom_color_itembottomnav_quanly"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="20dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
