--- a/app/src/main/res/layout/activity_thanh_toan.xml
+++ b/app/src/main/res/layout/activity_thanh_toan.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="8dp"
     tools:context=".GioHang.ThanhToan.ThanhToanActivity">
 
     <!--    layout Header of Thanh toán -->
@@ -21,6 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
             android:autoSizeTextType="uniform"
             android:drawableLeft="@drawable/baseline_arrow_back_24"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -33,15 +33,19 @@
             android:textColor="@color/black"
             android:textSize="24sp"
             android:textStyle="bold"
+            android:layout_marginTop="10dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/iconCartHome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="5dp"
             android:drawableLeft="@drawable/baseline_home_24"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -53,74 +57,94 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/layoutPayHeader">
+        app:layout_constraintTop_toBottomOf="@id/layoutPayHeader"
+        android:layout_marginLeft="15dp">
+        <EditText
+            android:id="@+id/edtDiaChi"
+            android:layout_width="360dp"
+            android:layout_height="50dp"
+            android:hint="Địa chỉ"
+            android:textColor="@color/black"
+            android:background="@drawable/edtbackground"
+            android:layout_marginBottom="15dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+<!--        <CheckBox-->
+<!--            android:id="@+id/checkboxDiaChi"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Mặc định"-->
+<!--            android:layout_marginLeft="20dp"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/edtDiaChi"-->
+<!--            app:layout_constraintLeft_toLeftOf="parent"/>-->
 
         <!--      trạng thái hàng 1-->
-        <LinearLayout
-            android:id="@+id/layoutPayCheck1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+<!--        <LinearLayout-->
+<!--            android:id="@+id/layoutPayCheck1"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:layout_constraintLeft_toLeftOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent">-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start"
-                android:layout_marginLeft="16dp"
-                android:text="Đã vận đơn" />
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="start"-->
+<!--                android:layout_marginLeft="16dp"-->
+<!--                android:text="Đã vận đơn" />-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_marginLeft="220dp"
-                android:text="Hoàn thành" />
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="end"-->
+<!--                android:layout_marginLeft="220dp"-->
+<!--                android:text="Hoàn thành" />-->
 
-        </LinearLayout>
+<!--        </LinearLayout>-->
 
-        <!--       trạng thái hàng 2-->
-        <LinearLayout
-            android:id="@+id/layoutPayCheck2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/layoutPayCheck1">
+<!--        &lt;!&ndash;       trạng thái hàng 2&ndash;&gt;-->
+<!--        <LinearLayout-->
+<!--            android:id="@+id/layoutPayCheck2"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:layout_constraintLeft_toLeftOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/layoutPayCheck1">-->
 
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="32dp"
-                android:src="@drawable/logocheck" />
+<!--            <ImageView-->
+<!--                android:layout_width="50dp"-->
+<!--                android:layout_height="50dp"-->
+<!--                android:layout_marginLeft="32dp"-->
+<!--                android:src="@drawable/logocheck" />-->
 
-            <ImageView
-                android:layout_width="200dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="8dp"
-                android:src="@drawable/logoline" />
+<!--            <ImageView-->
+<!--                android:layout_width="200dp"-->
+<!--                android:layout_height="30dp"-->
+<!--                android:layout_marginLeft="16dp"-->
+<!--                android:layout_marginTop="8dp"-->
+<!--                android:src="@drawable/logoline" />-->
 
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="16dp"
-                android:src="@drawable/logouncheck" />
-        </LinearLayout>
+<!--            <ImageView-->
+<!--                android:layout_width="50dp"-->
+<!--                android:layout_height="50dp"-->
+<!--                android:layout_marginLeft="16dp"-->
+<!--                android:src="@drawable/logouncheck" />-->
+<!--        </LinearLayout>-->
 
-        <!--       trạng thái hàng 3-->
-        <LinearLayout
-            android:id="@+id/layoutPayCheck3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/layoutPayCheck2">
+<!--        &lt;!&ndash;       trạng thái hàng 3&ndash;&gt;-->
+<!--        <LinearLayout-->
+<!--            android:id="@+id/layoutPayCheck3"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:layout_constraintLeft_toLeftOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/layoutPayCheck2">-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:text="56576757e5y" />
-        </LinearLayout>
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginLeft="16dp"-->
+<!--                android:text="56576757e5y" />-->
+<!--        </LinearLayout>-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -128,12 +152,13 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layoutPayContent"
         android:layout_width="wrap_content"
-        android:layout_height="400dp"
-        android:layout_marginTop="16dp"
+        android:layout_height="440dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/khung"
         android:padding="16dp"
         android:translationZ="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/layoutPayState">
 
         <TextView
@@ -151,7 +176,7 @@
             android:id="@+id/layoutPayContentItem1"
             android:layout_width="350dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="10dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvHeaderOfPayContent">
@@ -159,7 +184,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvThanhToan"
                 android:layout_width="match_parent"
-                android:layout_height="220dp"
+                android:layout_height="320dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -170,51 +195,51 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <!--        layout chứa phần ITEM2 của content-->
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/layoutPayContentItem2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/layoutPayContentItem1">
+<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--            android:id="@+id/layoutPayContentItem2"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="16dp"-->
+<!--            app:layout_constraintLeft_toLeftOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/layoutPayContentItem1">-->
 
 
-            <TextView
-                android:id="@+id/tvOfPayContentItem2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="Mã khuyến mãi"
-                android:textSize="16dp"
-                android:textStyle="bold"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+<!--            <TextView-->
+<!--                android:id="@+id/tvOfPayContentItem2"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="16dp"-->
+<!--                android:text="Mã khuyến mãi"-->
+<!--                android:textSize="16dp"-->
+<!--                android:textStyle="bold"-->
+<!--                app:layout_constraintLeft_toLeftOf="parent"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintTop_toTopOf="parent" />-->
 
-            <FrameLayout
-                android:id="@+id/framOfPayContentItem2"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="48dp"
-                android:background="@drawable/khungvuong"
-                android:padding="16dp"
-                app:layout_constraintLeft_toRightOf="@id/tvOfPayContentItem2"
-                app:layout_constraintTop_toTopOf="parent">
+<!--            <FrameLayout-->
+<!--                android:id="@+id/framOfPayContentItem2"-->
+<!--                android:layout_width="200dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginLeft="48dp"-->
+<!--                android:background="@drawable/khungvuong"-->
+<!--                android:padding="16dp"-->
+<!--                app:layout_constraintLeft_toRightOf="@id/tvOfPayContentItem2"-->
+<!--                app:layout_constraintTop_toTopOf="parent">-->
 
-                <TextView
-                    android:id="@+id/tvTitleVoucher"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical|center_horizontal"
-                    android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"
-                    android:text="Nhập hoặc chọn mã"
-                    android:textSize="16dp"
-                    android:textStyle="bold" />
+<!--                <TextView-->
+<!--                    android:id="@+id/tvTitleVoucher"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_gravity="center_vertical|center_horizontal"-->
+<!--                    android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"-->
+<!--                    android:text="Nhập hoặc chọn mã"-->
+<!--                    android:textSize="16dp"-->
+<!--                    android:textStyle="bold" />-->
 
-            </FrameLayout>
+<!--            </FrameLayout>-->
 
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
 
         <!--        layout chứa phần ITEM3 content-->
         <!--        <RelativeLayout-->
@@ -240,50 +265,50 @@
         <!--                android:text="300.000" />-->
         <!--        </RelativeLayout>-->
 
-        <RelativeLayout
-            android:id="@+id/layoutPayContentItem3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/layoutPayContentItem2">
+<!--        <RelativeLayout-->
+<!--            android:id="@+id/layoutPayContentItem3"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="8dp"-->
+<!--            app:layout_constraintLeft_toLeftOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/layoutPayContentItem2">-->
 
-            <TextView
-                android:id="@+id/tvOfPayContentItem4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Mã giảm giá" />
+<!--            <TextView-->
+<!--                android:id="@+id/tvOfPayContentItem4"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Mã giảm giá" />-->
 
-            <TextView
-                android:id="@+id/tvPriceOfPayContentItem4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="57dp"
-                android:text="50.000" />
-        </RelativeLayout>
+<!--            <TextView-->
+<!--                android:id="@+id/tvPriceOfPayContentItem4"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_alignParentRight="true"-->
+<!--                android:layout_marginRight="57dp"-->
+<!--                android:text="50.000" />-->
+<!--        </RelativeLayout>-->
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <!--    layout phần chứa checkbox-->
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layoutPayCheckBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/layoutPayFooter"
-        app:layout_constraintLeft_toLeftOf="parent">
+<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--        android:id="@+id/layoutPayCheckBox"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:layout_constraintBottom_toTopOf="@id/layoutPayFooter"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent">-->
 
-        <CheckBox
-            android:id="@+id/cbOfPay"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Đồng ý các điều khoản"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+<!--        <CheckBox-->
+<!--            android:id="@+id/cbOfPay"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Đồng ý các điều khoản"-->
+<!--            app:layout_constraintLeft_toLeftOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent" />-->
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
 
     <!--    layout của phần bottom của content -->
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -292,17 +317,17 @@
         android:layout_height="120dp"
         android:background="@drawable/khungbogoctren"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="32dp"
             android:layout_marginTop="8dp"
-            android:text="Tổng thanh toán:"
+            android:text="Tổng:"
             android:textColor="@color/black"
-            android:textSize="24sp"
+            android:textSize="20sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
