--- a/app/src/main/res/layout/giohang_layoutitemgiohang.xml
+++ b/app/src/main/res/layout/giohang_layoutitemgiohang.xml
@@ -23,7 +23,7 @@
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:padding="8dp"
-                android:scaleType="center"
+                android:scaleType="fitCenter"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
