--- a/app/src/main/res/layout/success_order.xml
+++ b/app/src/main/res/layout/success_order.xml
@@ -54,7 +54,7 @@
             app:layout_constraintTop_toBottomOf="@id/tvHeaderSuccess"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:src="@drawable/logo2"
+            android:src="@drawable/logo"
             android:layout_width="150dp"
             android:layout_height="150dp"/>
 
@@ -62,7 +62,7 @@
             android:layout_width="358dp"
             android:layout_height="74dp"
             android:layout_marginTop="32dp"
-            android:text="Cherry Cake cảm ơn bạn đã chọn mình trước biết bao sự lựa chọn ngoài kia"
+            android:text="Master Phone cảm ơn bạn đã chọn mình trước biết bao sự lựa chọn ngoài kia"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
