--- a/app/src/main/res/layout/activity_thanh_toan.xml
+++ b/app/src/main/res/layout/activity_thanh_toan.xml
@@ -70,14 +70,14 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
-<!--        <CheckBox-->
-<!--            android:id="@+id/checkboxDiaChi"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="Mặc định"-->
-<!--            android:layout_marginLeft="20dp"-->
-<!--            app:layout_constraintTop_toBottomOf="@id/edtDiaChi"-->
-<!--            app:layout_constraintLeft_toLeftOf="parent"/>-->
+        <CheckBox
+            android:id="@+id/checkboxDiaChi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Mặc định"
+            android:layout_marginLeft="20dp"
+            app:layout_constraintTop_toBottomOf="@id/edtDiaChi"
+            app:layout_constraintLeft_toLeftOf="parent"/>
 
         <!--      trạng thái hàng 1-->
 <!--        <LinearLayout-->
